--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<div class="card-white" id="introduction">
 
 				<h1>Hello, I'm Alicia !</h1>
-				<img src="images/profile-picture.png" class="img-circle" width="100px" alt="Alicia Arfeuillere">
+				<img src="profile-picture.png" class="img-circle" width="100px" alt="Alicia Arfeuillere">
 				<p>
 					Hello there! I am an 18-year-old student currently studying at ESSEC. I am an enthusiastic traveler who loves to explore new places, cultures, and experiences 🏞 .
 				</p>
